# frechet_simsearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: basic.hpp  bit_tools.hpp  frechet_hasher.hpp  frechet_tools.hpp  fresh_index.hpp  groundtruth.hpp  hmsearch_index.hpp  multi_trie_index.hpp  trit_array_trie.hpp  vcode_array.hpp  vcode_traits.hpp
scripts/: analyze_curve_statistics.py  analyze_distance.py  giscup_to_mpk.py  make_giscup_dataset.sh  make_porto_dataset.sh  porto_to_mpk.py  show_mpk.py  split_dataset.py
src/: analyze_array_perf.cpp  analyze_array_score.cpp  analyze_distance.cpp  analyze_fresh_perf.cpp  analyze_fresh_score.cpp  analyze_hmsearch_perf.cpp  analyze_mtrie_perf.cpp  make_range_groundtruth.cpp  run_exact_search.cpp
